fixed nav links spacing in the aside

--- a/frontend/session-2/style.css
+++ b/frontend/session-2/style.css
@@ -42,6 +42,7 @@ footer.flex-item {
 nav ul {
     padding: 0;
     text-align: center;
+    margin: 20px;
 }
 
 nav li {
